<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvViewSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_source"
            android:textColor="#9f9f9f"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvViewSource"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp">

            <RelativeLayout
                android:id="@+id/rlLike"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/news_detail_like_bg"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/ivLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:src="@drawable/like_ico_42_l" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:text="@string/like"
                        android:textColor="#339dff"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvLikeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="12dp"
                        android:textColor="#339dff"
                        android:textSize="15sp"
                        tools:text="(100)" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDisLike"
                android:layout_width="140dp"
                android:layout_toRightOf="@id/rlLike"
                android:layout_height="wrap_content"
                android:background="@drawable/news_detail_dislike_bg"
                android:layout_marginLeft="28dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/ivDislike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:src="@drawable/dislike_ico_42_l" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:text="@string/dislike"
                        android:textColor="#d44341"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llLikeAnimator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="90dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#339dff"
                android:text="+1" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>































